resolved styling issues - intensity width - broad history overflow - history time visualization
minor features to big history table
- sticky header & footer
- name tooltips & ellipsis
- row selection for quick time calculation

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -52,3 +52,53 @@ button.active-strong {
 .jog_btns #jog_left_btn, .jog_btns #jog_right_btn {
   width: 50%;
 }
+
+#job_history tbody td.name span {
+  text-overflow: ellipsis;
+  width: 130px;
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+#job_history_big tbody tr {
+  cursor: pointer;
+}
+#job_history_big tbody tr.selected {
+  background-color: #4caf50;
+  color: white;
+}
+#selected_history_label {
+  margin-right: 100px;
+}
+
+#selected_history_label .selected-label {
+  margin-right: 5px;
+}
+
+#history_modal .modal-footer {
+  padding-top: 10px;
+}
+
+#history_modal .scroll-container {
+  height: 425px;
+  overflow-y: scroll;
+}
+#history_modal .cell.row-1 { width: 300px; }
+#history_modal .cell.row-2 { width: 130px; }
+#history_modal .cell.row-3 { width: 130px; }
+#history_modal .cell.row-4 { width: 80px; }
+#history_modal .cell.row-5 { width: 100px; }
+
+#history_modal .row-1 { width: 265px; }
+#history_modal .row-2 { width: 115px; }
+#history_modal .row-3 { width: 115px; }
+#history_modal .row-4 { width: 80px; }
+#history_modal .row-5 { width: 100px; }
+
+#history_modal .cell {
+  display: inline-block;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
